// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Custom settings with layout provider 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
}

@media only screen and (min-width:20px) {
  .c0 {
    margin-left: -16px;
    margin-right: -16px;
  }

  .c0 > * {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (min-width:20px) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
  }
}

@media only screen and (min-width:480px) {
  .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media only screen and (min-width:747px) {
  .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

@media only screen and (min-width:960px) {
  .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    I'm positioned left
  </div>
  <div
    className="c1"
  >
    I'm positioned right
  </div>
</div>
`;

exports[`Layout Simple two column layout 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
}

@media only screen and (min-width:0px) {
  .c0 {
    margin-left: -16px;
    margin-right: -16px;
  }

  .c0 > * {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (min-width:1280px) {
  .c1 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    I'm positioned left
  </div>
  <div
    className="c1"
  >
    I'm positioned right
  </div>
</div>
`;

exports[`Layout Simplest example of the Layout 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    hello world
  </div>
</div>
`;
